--- a/index.html
+++ b/index.html
@@ -74,13 +74,101 @@
                        <a href="#">Home RTL</a>
                        </li>
                      </ul>
-                 </div>
+                    </div>
                   </li>
                   <li class="menu-list-item">
                     <a href="" class="menu-link"
                       >SHOP
                       <i class="bi bi-chevron-compact-down"></i>
                     </a>
+                    <div class="menu-dropdown-wrapper">
+                      <div class="menu-dropdown-megamenu">
+                        <div class="megamenu-links">
+                          <div class="megamenu-products">
+                            <h3 class="megamenu-products-title">
+                            Shop Style
+                            </h3>
+                            <ul class="megamenu-menu-list">
+                             <li>
+                              <a href="#">Shop Standart</a>
+                             </li>
+                             <li>
+                              <a href="#">Shop Full</a>
+                             </li>
+                             <li>
+                              <a href="#">Shop Only Categories</a>
+                             </li>
+                             <li>
+                              <a href="#">Shop Image Categories</a>
+                             </li>
+                             <li>
+                              <a href="#">Shop Sub Categories</a>
+                             </li>
+                             <li>
+                              <a href="#">Shop List</a>
+                             </li>
+                             <li>
+                              <a href="#">Hover Style 1</a>
+                             </li>
+                             <li>
+                              <a href="#">SHover Style 2</a>
+                             </li>
+                             <li>
+                              <a href="#">Hover Style 3</a>
+                             </li>
+                            </ul>
+                          </div>
+                          <div class="megamenu-products">
+                            <h3 class="megamenu-products-title">
+                            Filter Layout
+                            </h3>
+                            <ul class="megamenu-menu-list">
+                             <li>
+                              <a href="#">Sidebar</a>
+                             </li>
+                             <li>
+                              <a href="#">Filter Side Out</a>
+                             </li>
+                             <li>
+                              <a href="#">Filter Dropdown</a>
+                             </li>
+                             <li>
+                              <a href="#">Filter Drawer</a>
+                             </li>
+                         
+                          <div class="megamenu-products">
+                            <h3 class="megamenu-products-title">
+                            Shop Loader
+                            </h3>
+                            <ul class="megamenu-menu-list">
+                             <li>
+                              <a href="#">Shop Pagination</a>
+                             </li>
+                             <li>
+                              <a href="#">Shop Infinity</a>
+                             </li>
+                             <li>
+                              <a href="#">Shop Load More</a>
+                             </li>
+                             <li>
+                              <a href="#">Cart Modal</a>
+                             </li>
+                             <li>
+                              <a href="#">Cart Drawer</a>
+                             </li>
+                             <li>
+                              <a href="#">Cart Page</a>
+                             </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="megamenu-single">
+                          <a href="#">
+                            <img src="img/mega-menu.jpg" alt="">
+                          </a>
+                        </div>
+                      </div>
+                    </div>                       
                   </li>
                   <li></li>
                   <li class="menu-list-item">
