--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                      </ul>
                     </div>
                   </li>
-                  <li class="menu-list-item">
+                  <li class="menu-list-item megamenu-wrapper">
                     <a href="" class="menu-link"
                       >SHOP
                       <i class="bi bi-chevron-compact-down"></i>
@@ -84,88 +84,92 @@
                     <div class="menu-dropdown-wrapper">
                       <div class="menu-dropdown-megamenu">
                         <div class="megamenu-links">
-                          <div class="megamenu-products">
-                            <h3 class="megamenu-products-title">
-                            Shop Style
-                            </h3>
-                            <ul class="megamenu-menu-list">
-                             <li>
-                              <a href="#">Shop Standart</a>
-                             </li>
-                             <li>
-                              <a href="#">Shop Full</a>
-                             </li>
-                             <li>
-                              <a href="#">Shop Only Categories</a>
-                             </li>
-                             <li>
-                              <a href="#">Shop Image Categories</a>
-                             </li>
-                             <li>
-                              <a href="#">Shop Sub Categories</a>
-                             </li>
-                             <li>
-                              <a href="#">Shop List</a>
-                             </li>
-                             <li>
-                              <a href="#">Hover Style 1</a>
-                             </li>
-                             <li>
-                              <a href="#">SHover Style 2</a>
-                             </li>
-                             <li>
-                              <a href="#">Hover Style 3</a>
-                             </li>
-                            </ul>
-                          </div>
-                          <div class="megamenu-products">
-                            <h3 class="megamenu-products-title">
-                            Filter Layout
-                            </h3>
-                            <ul class="megamenu-menu-list">
-                             <li>
-                              <a href="#">Sidebar</a>
-                             </li>
-                             <li>
-                              <a href="#">Filter Side Out</a>
-                             </li>
-                             <li>
-                              <a href="#">Filter Dropdown</a>
-                             </li>
-                             <li>
-                              <a href="#">Filter Drawer</a>
-                             </li>
-                         
-                          <div class="megamenu-products">
-                            <h3 class="megamenu-products-title">
-                            Shop Loader
-                            </h3>
-                            <ul class="megamenu-menu-list">
-                             <li>
-                              <a href="#">Shop Pagination</a>
-                             </li>
-                             <li>
-                              <a href="#">Shop Infinity</a>
-                             </li>
-                             <li>
-                              <a href="#">Shop Load More</a>
-                             </li>
-                             <li>
-                              <a href="#">Cart Modal</a>
-                             </li>
-                             <li>
-                              <a href="#">Cart Drawer</a>
-                             </li>
-                             <li>
-                              <a href="#">Cart Page</a>
-                             </li>
-                            </ul>
-                          </div>
+                            <div class="megamenu-products">
+                              <h3 class="megamenu-products-title">
+                                Shop Style
+                              </h3>
+                              <ul class="megamenu-menu-list">
+                                <li>
+                                  <a href="#">Shop Standard</a>
+                                </li>
+                                <li>
+                                  <a href="#">Shop Full</a>
+                                </li>
+                                <li>
+                                  <a href="#">Shop Only Categories</a>
+                                </li>
+                                <li>
+                                  <a href="#">Shop Image Categories</a>
+                                </li>
+                                <li>
+                                  <a href="#">Shop Sub Categories</a>
+                                </li>
+                                <li>
+                                  <a href="#">Shop List</a>
+                                </li>
+                                <li>
+                                  <a href="#">Hover Style 1</a>
+                                </li>
+                                <li>
+                                  <a href="#">Hover Style 2</a>
+                                </li>
+                                <li>
+                                  <a href="#">Hover Style 3</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <div class="megamenu-products">
+                              <h3 class="megamenu-products-title">
+                                Filter Layout
+                              </h3>
+                              <ul class="megamenu-menu-list">
+                                <li>
+                                  <a href="#">Sidebar</a>
+                                </li>
+                                <li>
+                                  <a href="#">Filter Side Out</a>
+                                </li>
+                                <li>
+                                  <a href="#">Filter Dropdown</a>
+                                </li>
+                                <li>
+                                  <a href="#">Filter Drawer</a>
+                                </li>
+                              </ul>
+                            </div>
+                            <div class="megamenu-products">
+                              <h3 class="megamenu-products-title">
+                                Shop Loader
+                              </h3>
+                              <ul class="megamenu-menu-list">
+                                <li>
+                                  <a href="#">Shop Pagination</a>
+                                </li>
+                                <li>
+                                  <a href="#">Shop Infinity</a>
+                                </li>
+                                <li>
+                                  <a href="#">Shop Load More</a>
+                                </li>
+                                <li>
+                                  <a href="#">Cart Modal</a>
+                                </li>
+                                <li>
+                                  <a href="#">Cart Drawer</a>
+                                </li>
+                                <li>
+                                  <a href="#">Cart Page</a>
+                                </li>
+                              </ul>
+                            </div>
                         </div>
                         <div class="megamenu-single">
                           <a href="#">
                             <img src="img/mega-menu.jpg" alt="">
                           </a>
+                          <H3 class="megamenu-single-title"> JOIN THE LAYERING GANG</H3>
+                         <h4 class="megamenu-single-subtitle">Suspendisse Faucibus nunc et pellentesque</h4>
+                         <a href="#" class="megamenu-single-button btn btn-sm">Shop Now</a>
                         </div>
                       </div>
                     </div>                       
@@ -190,17 +194,17 @@
             </div>
             <div class="header-right">
               <div class="header-right-links">
-                <div class="header-account">
-                  <a href="#">
-                    <i class="bi bi-person"></i>
-                  </a>
-                  <button class="toggle-button">
-                    <i class="bi bi-search"></i>
-                  </button>
-                  <a href="#">
-                    <i class="bi bi-heart"></i>
-                  </a>
-                  <a href="#" class="header-cart">
+                <a href="#" class="header-account">
+                  <i class="bi bi-person"></i>
+                </a>
+                <button class="toggle-button">
+                  <i class="bi bi-search"></i>
+                </button>
+                <a href="#">
+                  <i class="bi bi-heart"></i>
+                </a>
+                <div class="header-cart">
+                  <a href="#" class="header-cart-link">
                     <i class="bi bi-bag"></i>
                     <span class="header-cart-count">0</span>
                   </a>
@@ -210,7 +214,54 @@
         </div>
       </div>
     </header>
-
     <!--! header end -->
+
+    <!-- modal search start-->
+
+    <div class="modal-search">
+      <div class="modal-wrapper">
+        <h3 class="modal-title">Search for products</h3>
+        <p class="modal-text">Start typing to see products you are looking for.</p>
+        <form class="search-form">
+          <input type="text" placeholder="Search a product">
+          <button>
+            <i class="bi bi-search"></i>
+          </button>
+        </form>
+        <div class="search-results">
+          <div class="search-heading">
+            <h3>RESULTS FROM PRODUCT</h3>
+          </div>
+          <div class="results">
+            <a href="#" class="result-item">
+              <img src="img/products/product1/1.png" class="search-thumb" alt="">
+              <div class="search-info">
+                <h4>Analogue Resin Strap</h4>
+                <span class="search-sku">SKU: PD0016</span>
+                <span class="search-rice">$108.00</span>
+                
+</div>
+    </a>
+  </div>
+</div>
+<i class="bi bi-x-circle" ></i>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+     <!-- modal search end-->
   </body>
 </html>
