--- a/index.html
+++ b/index.html
@@ -216,52 +216,46 @@
     </header>
     <!--! header end -->
 
-    <!-- modal search start-->
-
-    <div class="modal-search">
-      <div class="modal-wrapper">
-        <h3 class="modal-title">Search for products</h3>
-        <p class="modal-text">Start typing to see products you are looking for.</p>
-        <form class="search-form">
-          <input type="text" placeholder="Search a product">
-          <button>
-            <i class="bi bi-search"></i>
-          </button>
-        </form>
-        <div class="search-results">
-          <div class="search-heading">
-            <h3>RESULTS FROM PRODUCT</h3>
+       <!--! modal search start  -->
+       <div class="modal-search">
+        <div class="modal-wrapper">
+          <h3 class="modal-title">Search for products</h3>
+          <p class="modal-text">Start typing to see products you are looking for.</p>
+          <form class="search-form">
+            <input type="text" placeholder="Search a product">
+            <button>
+              <i class="bi bi-search"></i>
+            </button>
+          </form>
+          <div class="search-results">
+            <div class="search-heading">
+              <h3>RESULTS FROM PRODUCT</h3>
+            </div>
+            <div class="results">
+              <a href="#" class="result-item">
+                <img src="img/products/product1/1.png" class="search-thumb" alt="">
+                <div class="search-info">
+                  <h4>Analogue Resin Strap</h4>
+                  <span class="search-sku">SKU: PD0016</span>
+                  <span class="search-price">$108.00</span>
+                </div>
+              </a>
+              <a href="#" class="result-item">
+                <img src="img/products/product2/1.png" class="search-thumb" alt="">
+                <div class="search-info">
+                  <h4>Ridley High Waint</h4>
+                  <span class="search-sku">SKU: PD0016</span>
+                  <span class="search-price">$108.00</span>
+                </div>
+              </a>
+            </div>
           </div>
-          <div class="results">
-            <a href="#" class="result-item">
-              <img src="img/products/product1/1.png" class="search-thumb" alt="">
-              <div class="search-info">
-                <h4>Analogue Resin Strap</h4>
-                <span class="search-sku">SKU: PD0016</span>
-                <span class="search-rice">$108.00</span>
-                
-</div>
-    </a>
-  </div>
-</div>
-<i class="bi bi-x-circle" ></i>
-  </div>
-
-</div>
+          <i class="bi bi-x-circle"></i>
+        </div>
+      </div>
+    <!--! modal search end  -->
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-     <!-- modal search end-->
   </body>
 </html>
