--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="header-wrapper">
             <div class="header-mobile">
               <i class="bi bi-list">
-                
+
               </i>
             </div>
             <div class="header-left">
@@ -197,6 +197,7 @@
                   <li></li>
                 </ul>
               </nav>
+              <i class="bi-x-circle"></i>
             </div>
             <div class="header-right">
               <div class="header-right-links">
