--- a/index.html
+++ b/index.html
@@ -266,29 +266,29 @@
         <img src="img/slider/slider1.jpg" class="img-fluid" alt="">
       </div>
       <div class="container">
-        <p class="slider-title">SUMMER 2022</p>
-        <h2>Save up to 70%</h2>
+        <p class="slider-title">SUMMER 2023</p>
+        <h2 class="slider-heading">Save up to 70%</h2>
         <a href="#" class="btn btn-lg btn-primary">Explore Now</a>
       </div>
-      <div class="slider-buttons">
-        <button>
-          <i class="bi bi-checron-left"></i>
-        </button>
-        <button>
-          <i class="bi bi-checron-right"></i>
-        </button>
-      </div>
-      <div class="slider-dots">
-        <button class="slider-dot">
-          <span></span>
-        </button>
-        <button class="slider-dot">
-          <span></span>
-        </button>
-        <button class="slider-dot">
-          <span></span>
-        </button>
-      </div>
+    </div>
+    <div class="slider-buttons">
+      <button>
+        <i class="bi bi-chevron-left"></i>
+      </button>
+      <button>
+        <i class="bi bi-chevron-right"></i>
+      </button>
+    </div>
+    <div class="slider-dots">
+      <button class="slider-dot">
+        <span></span>
+      </button>
+      <button class="slider-dot">
+        <span></span>
+      </button>
+      <button class="slider-dot">
+        <span></span>
+      </button>
     </div>
   </div>
 </section>
