product item css

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <div class="container">
       <div class="section-title">
         <h2>All Categories</h2>
-        <p>Summer Collection New Morden Design</p>
+        <p>Summer Collection New modern Design</p>
       </div>
       <ul class="category-list">
         <li class="category-item">
@@ -346,70 +346,211 @@
   </section>
   <!--! categories end  -->
 
-   <!--! products start  -->
-   <section class="products">
-    <div class="container">
-      <div class="section-title">
-        <h2>Featured Products</h2>
-        <p>Summer Collection New Modern Design</p>
-      </div>
-      <div class="product-wrapper">
-        <ul class="product-list">
-          <li class="product-item">
-            <div class="product-image">
-              <a href="#">
-                <img src="img/products/product1/1.png" alt="">
-              </a>
-            </div>
-            <div class="product-info">
-              <a href="$" class="product-title">Analogue Resin Strap</a>
-              <ul class="product-star">
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-fill"></i>
-                </li>
-                <li>
-                  <i class="bi bi-star-half"></i>
-                </li>
-              </ul>
-              <div class="product-prices">
-                <strong>$108.00</strong>
-                <span>$165</span>
-              </div>
-              <span class="product-discount">-17%</span>
-              <div class="product-links">
-                <button>
-                  <i class="bi bi-basket-fill"></i>
-                </button>
-                <button>
-                  <i class="bi bi-heart-fill"></i>
-                </button>
+    <!--! products start  -->
+    <section class="products">
+      <div class="container">
+        <div class="section-title">
+          <h2>Featured Products</h2>
+          <p>Summer Collection New Morden Design</p>
+        </div>
+        <div class="product-wrapper">
+          <ul class="product-list">
+            <li class="product-item">
+              <div class="product-image">
                 <a href="#">
-                  <i class="bi bi-eye-fill"></i> 
-                </a>
-                <a href="#">
-                  <i class="bi bi-share-fill"></i> 
+                  <img src="img/products/product1/1.png" alt="">
+                  <img src="img/products/product1/1.png" alt="" class="img1">
+                  <img src="img/products/product1/2.png" alt="" class="img2">
                 </a>
               </div>
-            </div>
-          </li>
-        </ul>
+              <div class="product-info">
+                <a href="$" class="product-title">Analogue Resin Strap</a>
+                <ul class="product-star">
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-half"></i>
+                  </li>
+                </ul>
+                <div class="product-prices">
+                  <strong>$108.00</strong>
+                  <span>$165</span>
+                  <strong class="new-price">$108.00</strong>
+                  <span class="old-price">$165.00</span>
+                </div>
+                <span class="product-discount">-17%</span>
+                <div class="product-links">
+                  <button>
+                    <i class="bi bi-basket-fill"></i>
+                  </button>
+                  <button>
+                    <i class="bi bi-heart-fill"></i>
+                  </button>
+                  <a href="#">
+                    <i class="bi bi-eye-fill"></i> 
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-share-fill"></i> 
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="product-item">
+              <div class="product-image">
+                <a href="#">
+                  <img src="img/products/product2/1.png" alt="" class="img1">
+                  <img src="img/products/product2/2.png" alt="" class="img2">
+                </a>
+              </div>
+              <div class="product-info">
+                <a href="$" class="product-title">Analogue Resin Strap</a>
+                <ul class="product-star">
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-half"></i>
+                  </li>
+                </ul>
+                <div class="product-prices">
+                  <strong class="new-price">$108.00</strong>
+                  <span class="old-price">$165.00</span>
+                </div>
+                <span class="product-discount">-17%</span>
+                <div class="product-links">
+                  <button>
+                    <i class="bi bi-basket-fill"></i>
+                  </button>
+                  <button>
+                    <i class="bi bi-heart-fill"></i>
+                  </button>
+                  <a href="#">
+                    <i class="bi bi-eye-fill"></i> 
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-share-fill"></i> 
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="product-item">
+              <div class="product-image">
+                <a href="#">
+                  <img src="img/products/product3/1.png" alt="" class="img1">
+                  <img src="img/products/product3/2.png" alt="" class="img2">
+                </a>
+              </div>
+              <div class="product-info">
+                <a href="$" class="product-title">Analogue Resin Strap</a>
+                <ul class="product-star">
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-half"></i>
+                  </li>
+                </ul>
+                <div class="product-prices">
+                  <strong class="new-price">$108.00</strong>
+                  <span class="old-price">$165.00</span>
+                </div>
+                <span class="product-discount">-17%</span>
+                <div class="product-links">
+                  <button>
+                    <i class="bi bi-basket-fill"></i>
+                  </button>
+                  <button>
+                    <i class="bi bi-heart-fill"></i>
+                  </button>
+                  <a href="#">
+                    <i class="bi bi-eye-fill"></i> 
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-share-fill"></i> 
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="product-item">
+              <div class="product-image">
+                <a href="#">
+                  <img src="img/products/product4/1.png" alt="" class="img1">
+                  <img src="img/products/product4/2.png" alt="" class="img2">
+                </a>
+              </div>
+              <div class="product-info">
+                <a href="$" class="product-title">Analogue Resin Strap</a>
+                <ul class="product-star">
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-fill"></i>
+                  </li>
+                  <li>
+                    <i class="bi bi-star-half"></i>
+                  </li>
+                </ul>
+                <div class="product-prices">
+                  <strong class="new-price">$108.00</strong>
+                  <span class="old-price">$165.00</span>
+                </div>
+                <span class="product-discount">-17%</span>
+                <div class="product-links">
+                  <button>
+                    <i class="bi bi-basket-fill"></i>
+                  </button>
+                  <button>
+                    <i class="bi bi-heart-fill"></i>
+                  </button>
+                  <a href="#">
+                    <i class="bi bi-eye-fill"></i> 
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-share-fill"></i> 
+                  </a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </section>
-  <!--! products end  -->
-
-
-
-
+    </section>
+    <!--! products end  -->
 
 
 
