--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <div class="slider-elements">
       <div class="slider-item">
         <div class="slider-image">
-          <img src="img/slider/slider1.png" class="img-fluid" alt="">
+          <img src="img/slider/slider1.jpg" class="img-fluid" alt="">
         </div>
         <div class="container">
           <p class="slider-title">SUMMER 2022</p>
@@ -286,7 +286,7 @@
     <div class="container">
       <div class="section-title">
         <h2>All Categories</h2>
-        <p>Summer Collection New Morden Design</p>
+        <p>Summer Collection New Modern Design</p>
       </div>
       <ul class="category-list">
         <li class="category-item">
@@ -334,7 +334,7 @@
     <div class="container">
       <div class="section-title">
         <h2>Featured Products</h2>
-        <p>Summer Collection New Morden Design</p>
+        <p>Summer Collection New Modern Design</p>
       </div>
       <div class="product-wrapper">
         <ul class="product-list">
@@ -377,11 +377,9 @@
                   <i class="bi bi-heart-fill"></i>
                 </button>
                 <a href="#">
-                  <i class="bi bi-eye-fill"></i> 
                   <i class="bi bi-eye-fill"></i>
                 </a>
                 <a href="#">
-                  <i class="bi bi-share-fill"></i> 
                   <i class="bi bi-share-fill"></i>
                 </a>
               </div>
@@ -426,11 +424,9 @@
                   <i class="bi bi-heart-fill"></i>
                 </button>
                 <a href="#">
-                  <i class="bi bi-eye-fill"></i> 
                   <i class="bi bi-eye-fill"></i>
                 </a>
                 <a href="#">
-                  <i class="bi bi-share-fill"></i> 
                   <i class="bi bi-share-fill"></i>
                 </a>
               </div>
@@ -475,11 +471,9 @@
                   <i class="bi bi-heart-fill"></i>
                 </button>
                 <a href="#">
-                  <i class="bi bi-eye-fill"></i> 
                   <i class="bi bi-eye-fill"></i>
                 </a>
                 <a href="#">
-                  <i class="bi bi-share-fill"></i> 
                   <i class="bi bi-share-fill"></i>
                 </a>
               </div>
@@ -524,11 +518,9 @@
                   <i class="bi bi-heart-fill"></i>
                 </button>
                 <a href="#">
-                  <i class="bi bi-eye-fill"></i> 
                   <i class="bi bi-eye-fill"></i>
                 </a>
                 <a href="#">
-                  <i class="bi bi-share-fill"></i> 
                   <i class="bi bi-share-fill"></i>
                 </a>
               </div>
@@ -539,28 +531,7 @@
     </div>
   </section>
   <!--! products end  -->
-
   <!--! campaigns start -->
-      <section class="campaigns">
-        <div class="container">
-          <div class="campaigns-wrapper">
-              <div class="campaign-item">
-                  <h3 class="campaign-title"></h3>
-                  <p class="campaign-desc"></p>
-                  <a href="#" class="">
-                    View All
-                    <i class="bi bi-arrow-right"></i>
-                  </a>
-              </div>
-              <div class="campaign-item">
-                  <h3 class="campaign-title"></h3>
-                  <p class="campaign-desc"></p>
-                  <a href="#" class="">
-                    View All
-                    <i class="bi bi-arrow-right"></i>
-                  </a>
-              </div>
-          </div>
   <section class="campaigns">
     <div class="container">
       <div class="campaigns-wrapper">
@@ -584,7 +555,6 @@
             <i class="bi bi-arrow-right"></i>
           </a>
         </div>
-      </section>
       </div>
       <div class="campaigns-wrapper">
         <div class="campaign-item">
@@ -612,6 +582,241 @@
   </section>
   <!--! campaigns end -->
 
+  <!--! products start  -->
+  <section class="products">
+    <div class="container">
+      <div class="section-title">
+        <h2>New Arrivals</h2>
+        <p>Summer Collection New Modern Design</p>
+      </div>
+      <div class="product-wrapper">
+        <ul class="product-list">
+          <li class="product-item">
+            <div class="product-image">
+              <a href="#">
+                <img src="img/products/product1/1.png" alt="" class="img1">
+                <img src="img/products/product1/2.png" alt="" class="img2">
+              </a>
+            </div>
+            <div class="product-info">
+              <a href="$" class="product-title">Analogue Resin Strap</a>
+              <ul class="product-star">
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-half"></i>
+                </li>
+              </ul>
+              <div class="product-prices">
+                <strong class="new-price">$108.00</strong>
+                <span class="old-price">$165.00</span>
+              </div>
+              <span class="product-discount">-17%</span>
+              <div class="product-links">
+                <button>
+                  <i class="bi bi-basket-fill"></i>
+                </button>
+                <button>
+                  <i class="bi bi-heart-fill"></i>
+                </button>
+                <a href="#">
+                  <i class="bi bi-eye-fill"></i>
+                </a>
+                <a href="#">
+                  <i class="bi bi-share-fill"></i>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="product-item">
+            <div class="product-image">
+              <a href="#">
+                <img src="img/products/product2/1.png" alt="" class="img1">
+                <img src="img/products/product2/2.png" alt="" class="img2">
+              </a>
+            </div>
+            <div class="product-info">
+              <a href="$" class="product-title">Analogue Resin Strap</a>
+              <ul class="product-star">
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-half"></i>
+                </li>
+              </ul>
+              <div class="product-prices">
+                <strong class="new-price">$108.00</strong>
+                <span class="old-price">$165.00</span>
+              </div>
+              <span class="product-discount">-17%</span>
+              <div class="product-links">
+                <button>
+                  <i class="bi bi-basket-fill"></i>
+                </button>
+                <button>
+                  <i class="bi bi-heart-fill"></i>
+                </button>
+                <a href="#">
+                  <i class="bi bi-eye-fill"></i>
+                </a>
+                <a href="#">
+                  <i class="bi bi-share-fill"></i>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="product-item">
+            <div class="product-image">
+              <a href="#">
+                <img src="img/products/product3/1.png" alt="" class="img1">
+                <img src="img/products/product3/2.png" alt="" class="img2">
+              </a>
+            </div>
+            <div class="product-info">
+              <a href="$" class="product-title">Analogue Resin Strap</a>
+              <ul class="product-star">
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-half"></i>
+                </li>
+              </ul>
+              <div class="product-prices">
+                <strong class="new-price">$108.00</strong>
+                <span class="old-price">$165.00</span>
+              </div>
+              <span class="product-discount">-17%</span>
+              <div class="product-links">
+                <button>
+                  <i class="bi bi-basket-fill"></i>
+                </button>
+                <button>
+                  <i class="bi bi-heart-fill"></i>
+                </button>
+                <a href="#">
+                  <i class="bi bi-eye-fill"></i>
+                </a>
+                <a href="#">
+                  <i class="bi bi-share-fill"></i>
+                </a>
+              </div>
+            </div>
+          </li>
+          <li class="product-item">
+            <div class="product-image">
+              <a href="#">
+                <img src="img/products/product4/1.png" alt="" class="img1">
+                <img src="img/products/product4/2.png" alt="" class="img2">
+              </a>
+            </div>
+            <div class="product-info">
+              <a href="$" class="product-title">Analogue Resin Strap</a>
+              <ul class="product-star">
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-fill"></i>
+                </li>
+                <li>
+                  <i class="bi bi-star-half"></i>
+                </li>
+              </ul>
+              <div class="product-prices">
+                <strong class="new-price">$108.00</strong>
+                <span class="old-price">$165.00</span>
+              </div>
+              <span class="product-discount">-17%</span>
+              <div class="product-links">
+                <button>
+                  <i class="bi bi-basket-fill"></i>
+                </button>
+                <button>
+                  <i class="bi bi-heart-fill"></i>
+                </button>
+                <a href="#">
+                  <i class="bi bi-eye-fill"></i>
+                </a>
+                <a href="#">
+                  <i class="bi bi-share-fill"></i>
+                </a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <!--! products end  -->
+
+  <!--! blogs start  -->
+  <section class="blos">
+    <div class="container">
+      <div class="section-title">
+        <h2>New Arrivals</h2>
+        <p>Summer Collection New Modern Design</p>
+      </div>
+      <ul class="blog-list">
+        <li class="blog-item">
+          <a href="#" class="blog-image">
+            <img src="img/blogs/blog1.jpg" alt="">
+          </a>
+          <div class="blog-info">
+            <div class="blog-info-top">
+              <span>25 Feb, 2021 </span>
+              -
+              <span>0 Comments</span>
+            </div>
+            <div class="blog-info-center">
+              <a href="#">Aliquam hendrerit mi metus</a>
+            </div>
+            <div class="blog-info-bottom">
+              <a href="#">Read More</a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!--! blogs end  -->
+
   </div>
 </body>
+
 </html>
