--- a/index.html
+++ b/index.html
@@ -786,16 +786,52 @@
   <!--! products end  -->
 
   <!--! blogs start  -->
-  <section class="blos">
+  <section class="blogs">
     <div class="container">
       <div class="section-title">
-        <h2>New Arrivals</h2>
+        <h2>From Our Blog</h2>
         <p>Summer Collection New Modern Design</p>
       </div>
       <ul class="blog-list">
         <li class="blog-item">
           <a href="#" class="blog-image">
             <img src="img/blogs/blog1.jpg" alt="">
+          </a>
+          <div class="blog-info">
+            <div class="blog-info-top">
+              <span>25 Feb, 2021 </span>
+              -
+              <span>0 Comments</span>
+            </div>
+            <div class="blog-info-center">
+              <a href="#">Aliquam hendrerit mi metus</a>
+            </div>
+            <div class="blog-info-bottom">
+              <a href="#">Read More</a>
+            </div>
+          </div>
+        </li>
+        <li class="blog-item">
+          <a href="#" class="blog-image">
+            <img src="img/blogs/blog2.jpg" alt="">
+          </a>
+          <div class="blog-info">
+            <div class="blog-info-top">
+              <span>25 Feb, 2021 </span>
+              -
+              <span>0 Comments</span>
+            </div>
+            <div class="blog-info-center">
+              <a href="#">Aliquam hendrerit mi metus</a>
+            </div>
+            <div class="blog-info-bottom">
+              <a href="#">Read More</a>
+            </div>
+          </div>
+        </li>
+        <li class="blog-item">
+          <a href="#" class="blog-image">
+            <img src="img/blogs/blog3.jpg" alt="">
           </a>
           <div class="blog-info">
             <div class="blog-info-top">
