--- a/index.html
+++ b/index.html
@@ -851,6 +851,132 @@
     </div>
   </section>
   <!--! blogs end  -->
+ <!--! brands start  -->
+ <section class="brands">
+  <div class="container">
+    <ul class="brand-list">
+        <li class="brand-item">
+       <a href="#">
+          <img src="img/brands/brand1.png" alt="">
+       </a>
+      </li>
+      <li>
+        <li class="brand-item">
+       <a href="#">
+          <img src="img/brands/brand2.png" alt="">
+          <li class="brand-item">
+            <a href="#">
+               <img src="img/brands/brand3.png" alt="">
+            </a>
+           </li>
+           <li class="brand-item">
+            <a href="#">
+               <img src="img/brands/brand4.png" alt="">
+            </a>
+           </li> <li class="brand-item">
+       <a href="#">
+          <img src="img/brands/brand5.png" alt="">
+       </a>
+      </li>
+    </ul>
+  </div>
+</section>
+<!--! brands end  -->
+
+  <!--! campaign single start  -->
+  <section class="campaign-single">
+    <div class="container">
+      <div class="campaign-wrapper">
+        <h2>New Season Sale</h2>
+        <strong>40% OFF</strong>
+        <span></span>
+        <a href="#" class="btn btn-lg">
+          SHOP NOW
+          <i class="bi bi-arrow-right"></i>
+        </a>
+      </div>
+    </div>
+  </section>
+  <!--! campaign single end  -->
+
+
+  <!--! policy start  -->
+  <section class="policy">
+    <div class="container">
+      <ul class="policy-list">
+        <li class="policy-item">
+          <i class="bi bi-truck"></i>
+          <div class="policy-texts">
+            <strong>FREE DELIVERY</strong>
+            <span>From $59.89</span>
+          </div>
+        </li>
+        <li class="policy-item">
+          <i class="bi bi-headset"></i>
+          <div class="policy-texts">
+            <strong>SUPPORT 24/7</strong>
+            <span>Online 24 hours</span>
+          </div>
+        </li>
+        <li class="policy-item">
+          <i class="bi bi-arrow-clockwise"></i>
+          <div class="policy-texts">
+            <strong> 30 DAYS RETURN</strong>
+            <span>Simply return it within 30 days</span>
+          </div>
+        </li>
+        <li class="policy-item">
+          <i class="bi bi-credit-card"></i>
+          <div class="policy-texts">
+            <strong> PAYMENT METHOD</strong>
+            <span>Secure Payment</span>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <!--! policy end  -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   </div>
 </body>
