--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                 <li class="menu-list-item">
                   <a href="#" class="menu-link">
                     Blog
-                    <i class="bi bi-chevron-down"></i>
+       
                   </a>
                 </li>
                 <li class="menu-list-item">
                   <a href="#" class="menu-link">
                     Contact
-                    <i class="bi bi-chevron-down"></i>
+              
                   </a>
                 </li>
               </ul>
@@ -1087,50 +1087,37 @@
         </div>
       </div>
     </div>
-
-
-    <div class="copyright-row"></div>
+    <div class="copyright-row">
+      <div class="container">
+        <div class="footer-copyright">
+          <div class="site-copyright">
+            <p>
+              Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Emin Basbayan.
+            </p>
+          </div>
+          <a href="#">
+            <img src="img/footer/cards.png" alt="">
+          </a>
+          <div class="footer-menu">
+            <ul class="footer-menu-list">
+              <li class="list-item">
+                <a href="#">Privacy Policy</a>
+              </li>
+              <li class="list-item">
+                <a href="#">Terms and Conditions</a>
+              </li>
+              <li class="list-item">
+                <a href="#">Returns Policy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
+
   <!--! footer end  -->
-
-   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   </div>
 </body>
-
 </html>
