--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <nav class="navigation">
               <ul class="menu-list">
                 <li class="menu-list-item">
-                  <a href="#" class="menu-link active">
+                  <a href="index.html" class="menu-link active">
                     Home
                     <i class="bi bi-chevron-down"></i>
                   </a>
@@ -71,7 +71,7 @@
                   </div>
                 </li>
                 <li class="menu-list-item megamenu-wrapper">
-                  <a href="#" class="menu-link">
+                  <a href="shop.html" class="menu-link">
                     Shop
                     <i class="bi bi-chevron-down"></i>
                   </a>
@@ -169,13 +169,13 @@
                   </div>
                 </li>
                 <li class="menu-list-item">
-                  <a href="#" class="menu-link">
+                  <a href="blog.html" class="menu-link">
                     Blog
        
                   </a>
                 </li>
                 <li class="menu-list-item">
-                  <a href="#" class="menu-link">
+                  <a href="contact.html" class="menu-link">
                     Contact
               
                   </a>
@@ -531,6 +531,36 @@
     </div>
   </section>
   <!--! products end  -->
+    <!--! blogs start  -->
+    <section class="blos">
+      <div class="container">
+        <div class="section-title">
+          <h2>New Arrivals</h2>
+          <p>Summer Collection New Morden Design</p>
+        </div>
+        <ul class="blog-list">
+          <li class="blog-item">
+            <a href="#" class="blog-image">
+              <img src="img/blogs/blog1.jpg" alt="">
+            </a>
+            <div class="blog-info">
+              <div class="blog-info-top">
+                <span>25 Feb, 2021 </span>
+                -
+                <span>0 Comments</span>
+              </div>
+              <div class="blog-info-center">
+                <a href="#">Aliquam hendrerit mi metus</a>
+              </div>
+              <div class="blog-info-bottom">
+                <a href="#">Read More</a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--! blogs end  -->
   <!--! campaigns start -->
   <section class="campaigns">
     <div class="container">
