--- a/account.html
+++ b/account.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Account</title>
     <!--! Boostrap Icons CDN  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -36,7 +36,7 @@
                         <nav class="navigation">
                             <ul class="menu-list">
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link active">
+                                    <a href="index.html" class="menu-link">
                                         Home
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -73,7 +73,7 @@
                                     </div>
                                 </li>
                                 <li class="menu-list-item megamenu-wrapper">
-                                    <a href="#" class="menu-link">
+                                    <a href="shop.html" class="menu-link">
                                         Shop
                                         <i class="bi bi-chevron-down"></i>
                                     </a>
@@ -172,12 +172,12 @@
                                     </div>
                                 </li>
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link">
+                                    <a href="blog.html" class="menu-link">
                                         Blog
                                     </a>
                                 </li>
                                 <li class="menu-list-item">
-                                    <a href="#" class="menu-link">
+                                    <a href="contact.html" class="menu-link">
                                         Contact
                                     </a>
                                 </li>
@@ -249,84 +249,70 @@
     </div>
     <!--! modal search end  -->
 
-
-    <!--! contact start  -->
-    <section class="contact">
-        <div class="contact-top">
-            <div class="contact-map">
-                <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.9633698339308!2d28.929441087738052!3d41.04793012296828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab1d021adf417%3A0xba3a3fdfdbb5f5d!2sEy%C3%BCp%20Sultan%20Camii!5e0!3m2!1str!2str!4v1665091191675!5m2!1str!2str"
-                width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-    </div>
-    <div class="contact-bottom">
-
+    <!--! account start  -->
+    <section class="account-page">
         <div class="container">
-            <div class="contact-titles">
-                <h4>Contact with us</h4>
-                <h2>Get In Touch</h2>
-                <p>In hac habitasse platea dictumst. Pellentesque viverra sem nec orci lacinia, in bibendum urna
-                    mollis. Quisque nunc lacus, varius vel leo a, pretium lobortis metus. Vivamus consectetur
-                    consequat justo.</p>
-            </div>
-            <div class="contact-elements">
-                <form class="contact-form">
-                    <div class="">
-                        <label>
-                            Your Name
-                            <span>*</span>
-                        </label>
-                        <input type="text" required>
-                    </div>
-                    <div class="">
-                        <label>
-                            Your email
-                            <span>*</span>
-                        </label>
-                        <input type="text" required>
-                    </div>
-                    <div class="">
-                        <label>
-                            Subject
-                            <span>*</span>
-                        </label>
-                        <input type="text" required>
-                    </div>
-                    <div class="">
-                        <label>
-                            Your message
-                            <span>*</span>
-                        </label>
-                        <textarea id="author" name="author" type="text" value="" size="30" required=""></textarea>
-                    </div>
-                    <button class="btn btn-sm form-button">Send Message</button>
-                </form>
-                <div class="contact-info">
-                    <div class="contact-info-item">
-                        <div class="contact-info-texts">
-                            <strong> Clotya Store</strong>
-                            <p class="contact-street">
-                                Clotya Store
-                                Germany — 785 15h Street, Office 478/B Green Mall Berlin, De 81566</p>
-                            <a href="tel:Phone: +1 1234 567 88">Phone: +1 1234 567 88</a>
-                            <a href="mailto:Email: contact@example.com">Email: contact@example.com</a>
+            <div class="account-wrapper">
+                <div class="account-column">
+                    <h2>Login</h2>
+                    <form>
+                        <div>
+                            <label>
+                                <span>Username or email address *</span>
+                                <input type="text">
+                            </label>
                         </div>
-                    </div>
-                    <div class="contact-info-item">
-                        <div class="contact-info-texts">
-                            <strong> Opening Hours</strong>
-                            <p class="contact-date">
-                                Monday - Friday : 9am - 5pm</p>
-                            <p>Weekend Closed</p>
+                        <div>
+                            <label>
+                                <span>Password *</span>
+                                <input type="password">
+                            </label>
                         </div>
-                    </div>
+                        <p class="remember">
+                            <label>
+                                <input type="checkbox">
+                                <span>Remember me</span>
+                            </label>
+                            <button class="btn btn-sm">Login</button>
+                        </p>
+                        <a href="#" class="form-link">Lost your password?</a>
+                    </form>
+                </div>
+                <div class="account-column">
+                    <h2>Register</h2>
+                    <form>
+                        <div>
+                            <label>
+                                <span>Username *</span>
+                                <input type="text">
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <span>Email address *</span>
+                                <input type="email">
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <span>Password *</span>
+                                <input type="password">
+                            </label>
+                        </div>
+                        <div class="privacy-policy-text remember">
+                            <p>
+                                Your personal data will be used to support your experience throughout this website, to
+                                manage access to your account, and for other purposes described in our <a
+                                    href="#">privacy policy.</a>
+                            </p>
+                        </div>
+                        <button class="btn btn-sm">Register</button>
+                    </form>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<!--! contact end  -->
+    </section>
+    <!--! account end  -->
 
 
     <!--! policy start  -->
@@ -525,7 +511,7 @@
                 <div class="footer-copyright">
                     <div class="site-copyright">
                         <p>
-                            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Semnuraa.
+                            Copyright 2022 © E-Commerce Theme. All right reserved. Powered by Emin Basbayan.
                         </p>
                     </div>
                     <a href="#">
